--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@ Mascotas
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div class="form-group">
-        <label for="username">Olvidé mi contraseña</label>
+        <a href="{% url 'password_reset' %}">Olvidé mi contraseña</a>
         <input class="btn btn-primary" type="submit" value="Ingresar">
       </div>
     </div>
