--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,12 @@ Mascotas
       <div class="form-group">
         <a href="{% url 'password_reset' %}">Olvidé mi contraseña</a>
         <input class="btn btn-primary" type="submit" value="Ingresar">
+        <a class="btn btn-primary" href="{%url 'registrar'%}">Registrarse</a>
       </div>
     </div>
   </div>
+
+
 
 </form>
 {% endblock %}
