--- a/templates/mascota/mascota_list.html
+++ b/templates/mascota/mascota_list.html
@@ -43,9 +43,18 @@
     <h1>No hay registros de mascotas</h1>
     {% endif %}
   </tbody>
-
-
 </table>
 
-
+<ul class="pager">
+  <li>
+    {% if page_obj.has_previous %}
+    <a class="btn btn-success" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+    {% endif %}
+  </li>
+  <li>
+    {% if page_obj.has_next %}
+    <a class="btn btn-success" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+    {% endif %}
+  </li>
+</ul>
 {% endblock %}
